gap fix in nav

--- a/CSS/stylesheet-services.css
+++ b/CSS/stylesheet-services.css
@@ -15,6 +15,7 @@ nav{
     display: grid;
     grid-template-columns: 3fr 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
+    gap: 1em;
 }
 
 nav>a{
